# aoc2019

./: .gitignore  pyproject.toml
aoc/day1/: part1.py  part2.py
aoc/day2/: part1.py  part2.py
aoc/day3/: part1.py  part2.py
aoc/day4/: part1.py  part2.py
aoc/day5/: part1.py  part2.py
aoc/day6/: part1.py  part2.py
aoc/day7/: part1.py  part2.py
aoc/day8/: part1.py  part2.py
aoc/util/: helpers.py  intcode.py
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_intcode.py
