[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Sean Stewart <sean_stewart@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typical = {version = "^1.10", allows-prereleases = true}
[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
